# coincurve

./: .coveragerc  CMakeLists.txt  MANIFEST.in  pyproject.toml  requirements-dev.txt  setup.py  setup_support.py  tox.ini
.conda/: environment-dev.yml  environment.yml
.github/scripts/: build-windows-wheels.sh  build-with-conda-osx.sh  install-test-deps.sh
.github/workflows/: build.yml  docs.yml  verify_conda_build.yml
_cffi_build/: build.py
cm_library_c_binding/: CMakeLists.txt
cm_library_cffi_headers/: CMakeLists.txt
cm_python_module/: CMakeLists.txt
cm_vendored_library/: CMakeLists.txt
cmake/: UpdateVendoredLibraryOptions.cmake  VerifyPythonModule.cmake
coincurve/: __init__.py  _version.py  context.py  ecdsa.py  flags.py  keys.py  types.py  utils.py
setup/: setup_build_extension.py  setup_support.py
setup_modules/: _build_c_library.py  _build_cffi_extension.py  _config.py  _custom_commands.py  _support.py
setup_tools/: build_clib.py  commands.py  support.py
src/coincurve/: __init__.py  keys.py
tests/: test_bench.py  test_dll_tracer.py  test_ecdsa.py  test_flags.py  test_keys.py  test_utils.py
